<resources>
    <string name="app_name">Math Game</string>
    <string name="addition">ADDITION</string>
    <string name="subtraction">SUBTRACTION</string>
    <string name="multiplication">MULTIPLICATION</string>
    <string name="write_your_answer_here">Write your answer here</string>
    <string name="_3">3</string>
    <string name="next">NEXT</string>
    <string name="ok">OK</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="score">Score :</string>
    <string name="life">Life :</string>
    <string name="time">Time</string>
    <string name="_60">60</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="score_0">Score: 0</string>
    <string name="congratulations">Congratulations</string>
    <string name="math_game">Math Game</string>
</resources>