<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:text="@string/addition"
        android:textColor="#424242"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sub"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/subtraction"
        android:textColor="#424242"
        android:textSize="15sp" />

    <Button
        android:id="@+id/mul"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/multiplication"
        android:textColor="#424242"
        android:textSize="15sp" />
</LinearLayout>